[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/main_menu/new_game_button.png" type="Texture" id=1]
[ext_resource path="res://art/main_menu/new_game_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://art/main_menu/exit_button.png" type="Texture" id=3]
[ext_resource path="res://art/main_menu/exit_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://font/ChelseaMarket-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://art/main_menu/bk_img.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 150.0
margin_right = 924.0
margin_bottom = 471.053
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="container"]
margin_left = 213.0
margin_right = 611.0
margin_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 6
text = "Blahaj the braveheart"
align = 1
valign = 1
uppercase = true

[node name="new_game" type="TextureButton" parent="container"]
margin_left = 340.0
margin_top = 77.0
margin_right = 484.0
margin_bottom = 133.0
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="exit" type="TextureButton" parent="container"]
margin_left = 340.0
margin_top = 154.0
margin_right = 484.0
margin_bottom = 210.0
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 2.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="credits" type="Label" parent="container"]
margin_left = 215.0
margin_top = 305.0
margin_right = 609.0
margin_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Made by: Mostly Shashank, Sanpreet and Ishaan (and Rishabh)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 2 )
[connection signal="pressed" from="container/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="container/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
